<resources>
    <string name="app_name">hiufungk-SizeBook</string>
    <string name="add_button">Add</string>
    <string name="add_detail_name">Enter Details</string>
    <string name="input_name">Name</string>
    <string name="input_date">Date (yyyy-mm-dd)</string>
    <string name="input_neck">Neck size (circumference in inches)</string>
    <string name="input_bust">Bust size (circumference in inches)</string>
    <string name="input_chest">Chest size (circumference in inches)</string>
    <string name="input_waist">Waist size (circumference in inches)</string>
    <string name="input_hip">Hip size (circumference in inches)</string>
    <string name="input_inseam">Inseam size (length in inches)</string>
    <string name="input_comment">Comment</string>
    <string name="submit_button">Submit</string>
    <string name="clear_button">Clear All</string>
    <string name="info_count_word">Number of records:   </string>
    <string name="info_count">1234</string>
    <string name="nameDisplay">Name: </string>
    <string name="dateDisplay">Date (yyyy-mm-dd): </string>
    <string name="neckDisplay">Neck size (circumference in inches): </string>
    <string name="bustDisplay">Bust size (circumference in inches): </string>
    <string name="chestDisplay">Chest size (circumference in inches): </string>
    <string name="waistDisplay">Waist size (circumference in inches): </string>
    <string name="hipDisplay">Hip size (circumference in inches): </string>
    <string name="inseamDisplay">Inseam size (length in inches): </string>
    <string name="commentDisplay">Comment: </string>
    <string name="None">None</string>


</resources>
