<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hiufungk_sizebook.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/info_count_word"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/info_count_word"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/info_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_count"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/button"
        android:onClick="addEntry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/clear_button"
        android:onClick="clearAll" />

    <ListView
        android:id="@+id/InfoList"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

    </ListView>



</LinearLayout>
